--- a/pages/item-e69dc923-a3a6-4052-8726-9aeec9c2105c/index.html
+++ b/pages/item-e69dc923-a3a6-4052-8726-9aeec9c2105c/index.html
@@ -1,1 +1,57 @@
-<p></p>
+
+<p>Skill is the learned behavior of repetition and desire to improve. In the thousands of touches on the puck or taps of the keyboard, we start to loose sight of what was once learned behavior, now viewed simply as "skill".</p>
+<p>I am a big believer that few, if any, are actually born with what we commonly called "talent". A propensity toward an activity, action, or trade, sure. But born with something that can't be taught or learned? That I am less sure of. However there is something many are not born with, or at least not raised with (sadly), and that's to be teachable.</p>
+<p>In order to achieve a greater form of perfection, we must accept that we are imperfect in some way. Those who can't accept that they are not perfect, calcify, and never achieve more than who they are in the mindset they've locked themselves.</p>
+<p>Perfection or achieving 'skill', then requires the knowledge that others have something to offer us. A humility in the unknown and accepting of faults if we ever hope to eliminate them.</p>
+<h3 id="header-652b3a34-2dbe-f550-30a1-90bee123bd90">Engineering Fun</h3>
+<p>I wear two hats as the coach of a youth hockey team, literally and figuratively. The literal hats have two phrases on them:</p>
+<ol><li>Have a Day</li>
+<li>Engineered to Destroy</li>
+</ol>
+<p><b>Have a Day</b>
+ is from a friend's bachelor party and is a hockey stick that says "Have a Day" next to it. It doesn't say what kind of day. It's the day you make of it. They have to have fun above all, and the hat when they notice what it says, generates this talking point. That the game is fun, the day is fun... if they view it that way. It is this perspective that helps me focus on fun above all else.</p>
+<p><b>Engineered to Destroy</b>
+ is from a clothing brand but I loved the phrase. Often if I wear this hat to the rink it's cause we are training (or I'm scheming). It's my motto of how I "play the game" so to speak when it comes to work, or play.</p>
+<p>I am not playing the game. I am not helping them simply play better. I am seeking to build a machine that can destroy other teams. It's the style of play I seek. It's not flashy, it's effective and it's grinding. Structured defense, simple play actions repeated over and over again in order to build skill that wears teams down into dust.</p>
+<p>We've out-shot almost every opponent this season and we are a score and win by committee kind of a team. The games are low scoring, close, but we lurch forward and wear the other team out before breaking through.</p>
+<p>The clip below is the embodiment of what we're going for and I hope keeps them pushing forward as we talk about it. So many simple things go right in this clip from the experiences they've gained in playing even just this short few months.</p>
+<video-player source="https://youtu.be/OQPqP02Zv_w" caption="https://youtu.be/OQPqP02Zv_w" accent-color="red" crossorigin="anonymous" sticky-corner="none" resource="#824b5594-ca72-112e-f68e-000d9c02405f" prefix="oer:http://oerschema.org/ schema:http://schema.org/ dc:http://purl.org/dc/terms/ foaf:http://xmlns.com/foaf/0.1/ cc:http://creativecommons.org/ns# bib:http://bib.schema.org " element-visible lang="en" t="{&quot;embeddedMedia&quot;:&quot;embedded media&quot;}" source-type="youtube" sources="[]" source-data="[{&quot;src&quot;:&quot;https://www.youtube.com/embed/OQPqP02Zv_w&quot;,&quot;type&quot;:&quot;&quot;}]" tracks="[]"></video-player>
+<h3 id="header-72a9b73f-3c71-07f0-e5f4-52b22c80ad21">Key things of note in the video</h3>
+<ul>
+  
+  <li>The other team gets wide, then dumps the puck in because we have everyone back in position</li>
+  
+  <li>D goes behind the net and skates toward the corner, while the Center and Wing follow low in the zone toward the corner so that they can support the D.</li>
+  
+  <li>Other D and Wing stay on their side, closer to the goal in case anything falls apart.</li>
+  
+  <li>Attacking team has 3 against the wall, 2 hard on the fore-check (as they should), however the 3rd player is not O but instead D.</li>
+  
+  <li>Puck support ensures that D puts up wall (safe play) to Center, who wins a puck battle and it kicks out to the wing who tricks the D into getting caught standing still, chips off the wall and is gone</li>
+  
+  <li>The play is made by the Wing lining up a shot and being in the shooting position the entire time, as well as attacking from the dots in. This forces the D to stay with this player and creates a vacuum on entry into the zone</li>
+  
+  <li>The D (and Center getting back into the play) crash the net by filling the vacuum, perfectly. The Wing shoots, D has crashed low for rebound and then follows his shot to hit rebound in while Center is there high in case it bounced out high</li>
+</ul>
+<p>Diagrammed below. Each color is their route. Notice all the puck touches along the wall as well as the action by the wing of starting to move, chipping it to skate faster without the puck and then attacking wide while the other two drive the goal front.
+</p>
+<media-image source="files/image.png" alt="Golden goal at tournament" size="wide" offset="none" box card citation="Golden Goal" caption="Defense turns into offsense by following the play up ice after solid puck support by C and Wing" background-color="light-blue" style="background-color: var(--simple-colors-default-theme-light-blue-1); color: var(--simple-colors-default-theme-light-blue-12); padding: 32px; margin-bottom: 16px;" padding-top="32" padding-bottom="32" padding-left="32" padding-right="32" margin-bottom="16" modal-title="Defense turns into offsense by following the play up ice after solid puck support by C and Wing" _has-caption></media-image>
+<p>I couldn't have drawn this up any better. Crashing the net and supporting the puck on break outs are two things we've been focusing on recently (as well as attacking the net from low / cycling). It's early in the season and in our addressing of these concepts, which makes it even more rewarding when you start to see the planning put into practice by the kids.</p>
+<h3 id="header-9de6df2c-3dbe-3731-cd86-1f4ef10f48f1">Figurative</h3>
+<p>The figurative hats are of coach, and dad. My youngest is on the team and for the longest time, I refused to get involved with him playing. Not because I didn't want to, but because he didn't respond well to feedback from me outside of the sport and so I didn't want to bring that baggage along. It was difficult to sit and watch when I have a lot of experience in coaching and teaching... but it was the right decision early on.</p>
+<p>He's very "strong willed" which prior to the season, when I said I'd be head coach, I told him that things would have to change, specifically around his attitude to feedback if we were going to have fun and learn this season.</p>
+<p>Dad loves to watch both his boys play. Their joy at successes, their learning from defeat. But Dad is not the same as coach. Coach does not offer praise in the same way. If anything, coach largely has to ignore advancements to ensure fairness among all players. I played for several 'parent coaches' growing up and I've seen how that skews perspective in your own kid's favor if you don't address it immediately.</p>
+<p>Earlier in the year he had his 1st hat-trick; I had no idea until someone showed me the stats after the game. I am paying attention to something different than Dad would, and I miss out on things at times because of it (but that's ok). What changed though to take me from the stands to on the bench was perspective in how I'd approach 'training' him.</p>
+<p>I wouldn't.</p>
+<p>My theory with how best to coach my son revolved around lifting all boats. I had seen him raise his play based on who they were up against. He's often referred to as a brute, a bull in a china shop, a dump truck, a bulldozer. He just grinds forward and wants it more than other people. He's not high skill, he's high desire.</p>
+<p>I don't focus on him for this reason, I focus on building everyone up around him. He's why our ethos is grinding, exhausting the other team, because his teammates push him forward through their enhanced skills through drills; repetition.</p>
+<grid-plate disable-responsive layout="1-1" responsive-size="xs" breakpoint-sm="900" breakpoint-md="1200" breakpoint-lg="1500" breakpoint-xl="1800"><p slot="col-2" font-size="x-large" style="background-color: var(--simple-colors-default-theme-null-1); color: var(--simple-colors-default-theme-null-12); font-size: 1.4em;">Building them up, all of them, means that he has to keep chugging forward harder. This has driven him more than if I had focused on him alone, is more equitable, and brings everyone along in their skills and fun.</p>
+<video-player source="https://youtu.be/HkwLhDgLGgE" caption="https://youtu.be/HkwLhDgLGgE" accent-color="blue-grey" crossorigin="anonymous" sticky-corner="none" resource="#a92ad39b-312b-aaca-20ff-18a163d337ec" prefix="oer:http://oerschema.org/ schema:http://schema.org/ dc:http://purl.org/dc/terms/ foaf:http://xmlns.com/foaf/0.1/ cc:http://creativecommons.org/ns# bib:http://bib.schema.org " lang="en" slot="col-1" element-visible t="{&quot;embeddedMedia&quot;:&quot;embedded media&quot;}" source-type="youtube" sources="[]" source-data="[{&quot;src&quot;:&quot;https://www.youtube.com/embed/HkwLhDgLGgE&quot;,&quot;type&quot;:&quot;&quot;}]" tracks="[]"></video-player>
+</grid-plate>
+<grid-plate disable-responsive layout="1-1" responsive-size="xs" breakpoint-sm="900" breakpoint-md="1200" breakpoint-lg="1500" breakpoint-xl="1800"><p slot="col-1" style="background-color: var(--simple-colors-default-theme-null-1); color: var(--simple-colors-default-theme-null-12); font-size: 1.2em;" font-size="large">The kid with the Red pants is my youngest. And he had himself a week. Not because I coach him. But because I coach his friends. Their success and growth leads to his</p>
+<p slot="col-1" style="background-color: var(--simple-colors-default-theme-null-1); color: var(--simple-colors-default-theme-null-12); font-size: 1.2em;" font-size="large">Him and the Center supporting the puck in the clip played D one game this tournament, it's why they came back low to help out, and it's also how he figured out how to cause other D to misjudge their gap-ing.</p>
+<p slot="col-1" style="background-color: var(--simple-colors-default-theme-null-1); color: var(--simple-colors-default-theme-null-12); font-size: 1.2em;" font-size="large">He had maybe 5 goals all last season, and this tournament had 8G/3A in 4 games.</p>
+<media-image source="files/PXL_20231229_200725896.jpg" alt="files/PXL_20231229_200725896.jpg" size="wide" offset="none" slot="col-2" citation="Tournament MVP"></media-image>
+</grid-plate>
+<p>It is dad's joy getting to watch him and his brother play.</p>
+<p>The once un-coachable, now teachable.</p>
